# copchecker

./: .gitignore  .pre-commit-config.yaml  DOCUMENTATION.md  Makefile  README.md  docker-compose.yml  pre-commit-test.py  pyproject.toml
.github/workflows/: wemakepython.yml
configs/: emb_config.yaml  milvus_config.yaml
emb-service/: Dockerfile  app.py  app_checking.py  app_indexing.py  requirements.txt  utils.py
emb-service/configs/: emb_config.yaml
emb-service/kafka_conn/: __init__.py  consumer.py  producer.py
emb-service/processing/: __init__.py  pipelines.py  utils.py
emb-service/processing/models/: __init__.py  audio_ast.py  common.py  encoder.py  image_clip.py  image_jinaclip.py
emb-service/processing/operators/: __init__.py  checking_operators.py  indexing_operators.py  operators.py
emb-service/scripts/: Dockerfile  create_db.py  requirements.txt
front/: Dockerfile  Front.py  multiapp.py  requirements.txt
front/.streamlit/: config.toml
front/pages/: add_to_index_page.py  check_by_index_page.py  completed_checks_page.py  home.py
notebooks/: README.md  pip_train.ipynb
python-kafka/: main.py  requirements.txt
video-service/: Dockerfile  Makefile  README.md  go.mod  go.sum  upload-video.sh
video-service/cmd/service/: main.go
video-service/internal/: database.go  kafka.go
video-service/internal/handlers/: get_all_processings.go  get_processing_by_video_id.go  get_video.go  upload.go  upload_video.go
video-service/migrations/: 01_init_tables.sql  Dockerfile
video-service/migrations/sql/: 0001_init_tables.down.sql  (+5 more)
